--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/AirFusion45/db8bot_pdf-processing_server#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bull": "^4.8.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ipfs": "^0.62.3",
     "jsdom": "^19.0.0",
     "mhtml2html": "^3.0.0",
+    "pako": "^2.0.4",
     "puppeteer": "^14.1.0",
     "xvfb": "^0.4.0"
   },
