--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,10 @@
-runtime: nodejs16
+runtime: custom
 instance_class: F1
-env: standard
+env: flex
 service: default
 automatic_scaling:
   min_instances: 1
-  max_instances: 5
+  max_instances: 10
   target_cpu_utilization: 0.70
   max_concurrent_requests: 3
   max_pending_latency: 100ms
