--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "docker build . -t db8bot-pdf-processing-v1.0.0-prod"
   },
   "repository": {
     "type": "git",
